--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.13.2",
     "leaflet": "^1.9.4",
+    "localforage": "^1.10.0",
     "vue": "^3.5.24",
     "vue-leaflet": "^0.1.0"
   },
