--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.22",
     "sass": "^1.94.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.2",
