--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "vue": "^3.5.24",
-    "vue-leaflet": "^0.1.0"
+    "vue-leaflet": "^0.1.0",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.21",
