--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,13 @@
   "framework": "vite",
   "routes": [
     {
+      "src": "/ads.txt",
+      "status": 301,
+      "headers": {
+        "Location": "https://srv.adstxtmanager.com/19390/vemchuvabrasil.com"
+      }
+    },
+    {
       "src": "/assets/(.*)",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
