--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
+    "uuid": "^13.0.0",
     "vue": "^3.5.24",
     "vue-leaflet": "^0.1.0",
     "vue-router": "^4.6.3"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.21",
     "@types/node": "^24.10.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.22",
