--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@vercel/speed-insights": "^1.2.0",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
+    "swiper": "^12.0.3",
     "uuid": "^13.0.0",
     "vue": "^3.5.24",
     "vue-leaflet": "^0.1.0",
