--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@datadog/browser-rum": "^5.35.1",
     "@types/geojson": "^7946.0.16",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
